2006-02-09  Ville Vainio  <vivainio@gmail.com>  

	* test/*: Added a unit testing framework (finally). 
	'%run runtests.py' to run test_*.
	
	* ipapi.py: Exposed runlines and set_custom_exc

2006-02-07  Ville Vainio  <vivainio@gmail.com>  

	* iplib.py: don't split "f 1 2" to "f(1,2)" in autocall,
	instead use "f(1 2)" as before.

2006-02-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (IPythonDemo): Add new classes to the demo
	facilities, for demos processed by the IPython input filter
	(IPythonDemo), and for running a script one-line-at-a-time as a
	demo, both for pure Python (LineDemo) and for IPython-processed
	input (IPythonLineDemo).  After a request by Dave Kohel, from the
	SAGE team.
	(Demo.edit): added and edit() method to the demo objects, to edit
	the in-memory copy of the last executed block.

	* IPython/Magic.py (magic_edit): add '-r' option for 'raw'
	processing to %edit, %macro and %save.  These commands can now be
	invoked on the unprocessed input as it was typed by the user
	(without any prefilters applied).  After requests by the SAGE team
	at SAGE days 2006: http://modular.ucsd.edu/sage/days1/schedule.html.

2006-02-01  Ville Vainio  <vivainio@gmail.com>  

	* setup.py, eggsetup.py: easy_install ipython==dev works 
	correctly now (on Linux)
	
	* ipy_user_conf,ipmaker: user config changes, removed spurious 
	warnings
	
	* iplib: if rc.banner is string, use it as is.
	
	* Magic: %pycat accepts a string argument and pages it's contents.


2006-01-30  Ville Vainio  <vivainio@gmail.com>  

	* pickleshare,pspersistence,ipapi,Magic: persistence overhaul.
	Now %store and bookmarks work through PickleShare, meaning that 
	concurrent access is possible and all ipython sessions see the 
	same database situation all the time, instead of snapshot of
	the situation when the session was started. Hence, %bookmark
	results are immediately accessible from othes sessions. The database
	is also available for use by user extensions. See: